<resources>
    <string name="app_name">Video Game Finder</string>
    <string name="search_button">Search</string>
    <string name="game_name_hint">Name</string>
    <string name="game_genre">Genre</string>
    <string name="game_release_date">Release date</string>
    <string name="game_platform">Platforms</string>
    <string name="game_metacritic">Metacritic score</string>
    <string name="game_sorting">Sort by</string>
    <string name="settings">Settings</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_released">Release date</string>
    <string name="sort_by_added">Added date</string>
    <string name="sort_by_created">Created date</string>
    <string name="sort_by_updated">Updated date</string>
    <string name="sort_by_rating">Rating</string>
    <string name="sort_by_metacritic">Metacritic score</string>
    <string name="sort_reverse">Sort in reverse order</string>
    <string name="game_cover">Game cover</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="clear_all_filters">Clear all</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="view_type_list">List</string>
    <string name="view_type_grid">Grid</string>
</resources>